debugged but still got issues with saving